package handler

import (
	"context"

	"nfxid/events"
	badgeApp "nfxid/modules/auth/application/badge"
	profileApp "nfxid/modules/auth/application/profile"
	profileBadgeApp "nfxid/modules/auth/application/profile_badge"
	educationApp "nfxid/modules/auth/application/profile_education"
	occupationApp "nfxid/modules/auth/application/profile_occupation"
	roleApp "nfxid/modules/auth/application/role"
	userApp "nfxid/modules/auth/application/user"
	"nfxid/pkgs/logx"

	"github.com/ThreeDotsLabs/watermill/message"
	"github.com/google/uuid"
)

type AuthHandler struct {
	userAppSvc         *userApp.Service
	profileAppSvc      *profileApp.Service
	roleAppSvc         *roleApp.Service
	badgeAppSvc        *badgeApp.Service
	educationAppSvc    *educationApp.Service
	occupationAppSvc   *occupationApp.Service
	profileBadgeAppSvc *profileBadgeApp.Service
}

func NewAuthHandler(
	userAppSvc *userApp.Service,
	profileAppSvc *profileApp.Service,
	roleAppSvc *roleApp.Service,
	badgeAppSvc *badgeApp.Service,
	educationAppSvc *educationApp.Service,
	occupationAppSvc *occupationApp.Service,
	profileBadgeAppSvc *profileBadgeApp.Service,
) *AuthHandler {
	return &AuthHandler{
		userAppSvc:         userAppSvc,
		profileAppSvc:      profileAppSvc,
		roleAppSvc:         roleAppSvc,
		badgeAppSvc:        badgeAppSvc,
		educationAppSvc:    educationAppSvc,
		occupationAppSvc:   occupationAppSvc,
		profileBadgeAppSvc: profileBadgeAppSvc,
	}
}

// OnAuthToAuth_Success ç›‘å¬ Auth å†…éƒ¨æˆåŠŸæ¶ˆæ¯
func (h *AuthHandler) OnAuthToAuth_Success(ctx context.Context, evt events.AuthToAuth_SuccessEvent, msg *message.Message) error {
	logx.S().Infof("âœ… [Auth Worker] å·²æ”¶åˆ°æˆåŠŸæ¶ˆæ¯: operation=%s, entity_id=%s, user_id=%s, details=%+v",
		evt.Operation, evt.EntityID, evt.UserID, evt.Details)

	// é€šç”¨æˆåŠŸäº‹ä»¶å¤„ç†å™¨ï¼Œç”¨äºæ—¥å¿—è®°å½•å’Œåç»­æ‰©å±•
	// å¦‚éœ€æ·»åŠ ä¸šåŠ¡é€»è¾‘ï¼ˆå¦‚æ›´æ–°ç¼“å­˜ã€å‘é€é€šçŸ¥ç­‰ï¼‰ï¼Œå¯åœ¨æ­¤å¤„æ‰©å±•
	return nil
}

// OnAuthToAuth_Test ç›‘å¬ Auth å†…éƒ¨æµ‹è¯•æ¶ˆæ¯
func (h *AuthHandler) OnAuthToAuth_Test(ctx context.Context, evt events.AuthToAuth_TestEvent, msg *message.Message) error {
	logx.S().Infof("ğŸ“¨ [Auth Worker] æ”¶åˆ° Auth æµ‹è¯•æ¶ˆæ¯: %s", evt.Message)
	return nil
}

// OnAuthToAuth_UserInvalidateCache ç›‘å¬ç”¨æˆ·ç¼“å­˜æ¸…é™¤äº‹ä»¶ï¼ˆAuth å†…éƒ¨ï¼‰
func (h *AuthHandler) OnAuthToAuth_UserInvalidateCache(ctx context.Context, evt events.AuthToAuth_UserInvalidateCacheEvent, msg *message.Message) error {
	logx.S().Infof("ğŸ—‘ï¸ [Auth Worker] æ¸…é™¤ç”¨æˆ·ç¼“å­˜: user_id=%s, operation=%s", evt.UserID, evt.Operation)
	// æ³¨æ„ï¼šUser service å½“å‰æ²¡æœ‰ç¼“å­˜ï¼Œæ­£å¸¸æŸ¥è¯¢éƒ½æ²¡æœ‰ç¼“å­˜
	// å¦‚æœéœ€è¦æ·»åŠ ç¼“å­˜ï¼Œå¯ä»¥åœ¨è¿™é‡Œè°ƒç”¨ç¼“å­˜æ¸…ç†é€»è¾‘
	return nil
}

// OnAuthToAuth_ProfileInvalidateCache ç›‘å¬èµ„æ–™ç¼“å­˜æ¸…é™¤äº‹ä»¶ï¼ˆAuth å†…éƒ¨ï¼‰
func (h *AuthHandler) OnAuthToAuth_ProfileInvalidateCache(ctx context.Context, evt events.AuthToAuth_ProfileInvalidateCacheEvent, msg *message.Message) error {
	logx.S().Infof("ğŸ—‘ï¸ [Auth Worker] æ¸…é™¤èµ„æ–™ç¼“å­˜: profile_id=%s, user_id=%s, operation=%s", evt.ProfileID, evt.UserID, evt.Operation)
	// æ³¨æ„ï¼šProfile service å½“å‰æ²¡æœ‰ç¼“å­˜ï¼Œæ­£å¸¸æŸ¥è¯¢éƒ½æ²¡æœ‰ç¼“å­˜
	// å¦‚æœéœ€è¦æ·»åŠ ç¼“å­˜ï¼Œå¯ä»¥åœ¨è¿™é‡Œè°ƒç”¨ç¼“å­˜æ¸…ç†é€»è¾‘
	return nil
}

// OnAuthToAuth_RoleInvalidateCache ç›‘å¬è§’è‰²ç¼“å­˜æ¸…é™¤äº‹ä»¶ï¼ˆAuth å†…éƒ¨ï¼‰
func (h *AuthHandler) OnAuthToAuth_RoleInvalidateCache(ctx context.Context, evt events.AuthToAuth_RoleInvalidateCacheEvent, msg *message.Message) error {
	logx.S().Infof("ğŸ—‘ï¸ [Auth Worker] æ¸…é™¤è§’è‰²ç¼“å­˜: role_id=%s, operation=%s", evt.RoleID, evt.Operation)
	// æ³¨æ„ï¼šRole service å½“å‰æ²¡æœ‰ç¼“å­˜ï¼Œæ­£å¸¸æŸ¥è¯¢éƒ½æ²¡æœ‰ç¼“å­˜
	// å¦‚æœéœ€è¦æ·»åŠ ç¼“å­˜ï¼Œå¯ä»¥åœ¨è¿™é‡Œè°ƒç”¨ç¼“å­˜æ¸…ç†é€»è¾‘
	return nil
}

// OnAuthToAuth_BadgeInvalidateCache ç›‘å¬å¾½ç« ç¼“å­˜æ¸…é™¤äº‹ä»¶ï¼ˆAuth å†…éƒ¨ï¼‰
func (h *AuthHandler) OnAuthToAuth_BadgeInvalidateCache(ctx context.Context, evt events.AuthToAuth_BadgeInvalidateCacheEvent, msg *message.Message) error {
	logx.S().Infof("ğŸ—‘ï¸ [Auth Worker] æ¸…é™¤å¾½ç« ç¼“å­˜: badge_id=%s, operation=%s", evt.BadgeID, evt.Operation)

	badgeID, err := uuid.Parse(evt.BadgeID)
	if err != nil {
		logx.S().Warnf("æ— æ•ˆçš„ badge_id: %s, error: %v", evt.BadgeID, err)
		return nil
	}

	// Badge service æœ‰ç¼“å­˜ï¼Œè°ƒç”¨ç¼“å­˜æ¸…ç†
	if err := h.badgeAppSvc.InvalidateBadgeCache(ctx, badgeID); err != nil {
		logx.S().Errorf("æ¸…é™¤å¾½ç« ç¼“å­˜å¤±è´¥: badge_id=%s, error: %v", evt.BadgeID, err)
		return err
	}

	return nil
}

// OnAuthToAuth_EducationInvalidateCache ç›‘å¬æ•™è‚²ç»å†ç¼“å­˜æ¸…é™¤äº‹ä»¶ï¼ˆAuth å†…éƒ¨ï¼‰
func (h *AuthHandler) OnAuthToAuth_EducationInvalidateCache(ctx context.Context, evt events.AuthToAuth_EducationInvalidateCacheEvent, msg *message.Message) error {
	logx.S().Infof("ğŸ—‘ï¸ [Auth Worker] æ¸…é™¤æ•™è‚²ç»å†ç¼“å­˜: education_id=%s, profile_id=%s, operation=%s", evt.EducationID, evt.ProfileID, evt.Operation)

	educationID, err := uuid.Parse(evt.EducationID)
	if err != nil {
		logx.S().Warnf("æ— æ•ˆçš„ education_id: %s, error: %v", evt.EducationID, err)
		return nil
	}

	// Education service æœ‰ç¼“å­˜ï¼Œè°ƒç”¨ç¼“å­˜æ¸…ç†
	if err := h.educationAppSvc.InvalidateEducationCache(ctx, educationID); err != nil {
		logx.S().Errorf("æ¸…é™¤æ•™è‚²ç»å†ç¼“å­˜å¤±è´¥: education_id=%s, error: %v", evt.EducationID, err)
		return err
	}

	return nil
}

// OnAuthToAuth_OccupationInvalidateCache ç›‘å¬èŒä¸šä¿¡æ¯ç¼“å­˜æ¸…é™¤äº‹ä»¶ï¼ˆAuth å†…éƒ¨ï¼‰
func (h *AuthHandler) OnAuthToAuth_OccupationInvalidateCache(ctx context.Context, evt events.AuthToAuth_OccupationInvalidateCacheEvent, msg *message.Message) error {
	logx.S().Infof("ğŸ—‘ï¸ [Auth Worker] æ¸…é™¤èŒä¸šä¿¡æ¯ç¼“å­˜: occupation_id=%s, profile_id=%s, operation=%s", evt.OccupationID, evt.ProfileID, evt.Operation)
	// æ³¨æ„ï¼šOccupation service å½“å‰æ²¡æœ‰ç¼“å­˜ï¼Œæ­£å¸¸æŸ¥è¯¢éƒ½æ²¡æœ‰ç¼“å­˜
	// å¦‚æœéœ€è¦æ·»åŠ ç¼“å­˜ï¼Œå¯ä»¥åœ¨è¿™é‡Œè°ƒç”¨ç¼“å­˜æ¸…ç†é€»è¾‘
	return nil
}

// OnAuthToAuth_ProfileBadgeInvalidateCache ç›‘å¬ç”¨æˆ·å¾½ç« å…³è”ç¼“å­˜æ¸…é™¤äº‹ä»¶ï¼ˆAuth å†…éƒ¨ï¼‰
func (h *AuthHandler) OnAuthToAuth_ProfileBadgeInvalidateCache(ctx context.Context, evt events.AuthToAuth_ProfileBadgeInvalidateCacheEvent, msg *message.Message) error {
	logx.S().Infof("ğŸ—‘ï¸ [Auth Worker] æ¸…é™¤ç”¨æˆ·å¾½ç« å…³è”ç¼“å­˜: profile_badge_id=%s, profile_id=%s, badge_id=%s, operation=%s", evt.ProfileBadgeID, evt.ProfileID, evt.BadgeID, evt.Operation)
	// æ³¨æ„ï¼šProfileBadge service å½“å‰æ²¡æœ‰ç¼“å­˜ï¼Œæ­£å¸¸æŸ¥è¯¢éƒ½æ²¡æœ‰ç¼“å­˜
	// å¦‚æœéœ€è¦æ·»åŠ ç¼“å­˜ï¼Œå¯ä»¥åœ¨è¿™é‡Œè°ƒç”¨ç¼“å­˜æ¸…ç†é€»è¾‘
	return nil
}

// OnAuthToAuth_UserCreated ç›‘å¬ç”¨æˆ·åˆ›å»ºäº‹ä»¶ï¼ˆAuth å†…éƒ¨ï¼Œç”¨äºé€šçŸ¥å…¶ä»–æœåŠ¡åˆ›å»ºå…³è”æ•°æ®ï¼‰
func (h *AuthHandler) OnAuthToAuth_UserCreated(ctx context.Context, evt events.AuthToAuth_UserCreatedEvent, msg *message.Message) error {
	logx.S().Infof("âœ… [Auth Worker] æ”¶åˆ°ç”¨æˆ·åˆ›å»ºäº‹ä»¶: user_id=%s, username=%s, email=%s, status=%s", evt.UserID, evt.Username, evt.Email, evt.Status)

	// äº‹ä»¶å·²å‘å¸ƒï¼Œprofile ç­‰æœåŠ¡å¯é€šè¿‡ç›‘å¬æ­¤äº‹ä»¶æ¥å¤„ç†å…³è”æ•°æ®çš„åˆ›å»º
	// ä¿æŒè§£è€¦è®¾è®¡ï¼šprofile çš„åˆ›å»ºç”±ä¸šåŠ¡é€»è¾‘å†³å®šï¼ˆä¾‹å¦‚æ³¨å†Œæ—¶é€šè¿‡ HTTP handler æˆ– gRPC è°ƒç”¨åŒæ—¶åˆ›å»ºï¼‰
	return nil
}

// OnAuthToAuth_UserUpdated ç›‘å¬ç”¨æˆ·æ›´æ–°äº‹ä»¶ï¼ˆAuth å†…éƒ¨ï¼Œç”¨äºé€šçŸ¥å…¶ä»–æœåŠ¡ï¼‰
func (h *AuthHandler) OnAuthToAuth_UserUpdated(ctx context.Context, evt events.AuthToAuth_UserUpdatedEvent, msg *message.Message) error {
	logx.S().Infof("ğŸ“ [Auth Worker] æ”¶åˆ°ç”¨æˆ·æ›´æ–°äº‹ä»¶: user_id=%s, username=%s, email=%s", evt.UserID, evt.Username, evt.Email)

	// äº‹ä»¶å·²å‘å¸ƒï¼Œå…¶ä»–æœåŠ¡å¯é€šè¿‡ç›‘å¬æ­¤äº‹ä»¶æ¥å¤„ç†å…³è”æ•°æ®çš„æ›´æ–°
	// ä¿æŒè§£è€¦è®¾è®¡ï¼šå…³è”æ•°æ®çš„åŒæ­¥ç”±ä¸šåŠ¡é€»è¾‘å†³å®šï¼ˆå¯é€šè¿‡ gRPC è°ƒç”¨æˆ–äº‹ä»¶é©±åŠ¨ï¼‰

	return nil
}

// OnAuthToAuth_UserDeleted ç›‘å¬ç”¨æˆ·åˆ é™¤äº‹ä»¶ï¼ˆAuth å†…éƒ¨ï¼Œç”¨äºé€šçŸ¥å…¶ä»–æœåŠ¡åˆ é™¤å…³è”æ•°æ®ï¼‰
func (h *AuthHandler) OnAuthToAuth_UserDeleted(ctx context.Context, evt events.AuthToAuth_UserDeletedEvent, msg *message.Message) error {
	logx.S().Infof("ğŸ—‘ï¸ [Auth Worker] æ”¶åˆ°ç”¨æˆ·åˆ é™¤äº‹ä»¶: user_id=%s, username=%s, email=%s", evt.UserID, evt.Username, evt.Email)

	userID, err := uuid.Parse(evt.UserID)
	if err != nil {
		logx.S().Warnf("æ— æ•ˆçš„ user_id: %s, error: %v", evt.UserID, err)
		return nil
	}

	// åˆ é™¤å…³è”çš„ profileï¼ˆå¦‚æœå­˜åœ¨ï¼‰
	if err := h.profileAppSvc.DeleteByUserID(ctx, userID); err != nil {
		logx.S().Errorf("åˆ é™¤ç”¨æˆ·èµ„æ–™å¤±è´¥: user_id=%s, error: %v", evt.UserID, err)
		// ä¸è¿”å›é”™è¯¯ï¼Œé¿å…å½±å“å…¶ä»–æœåŠ¡çš„å¤„ç†
	}

	return nil
}
